--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,8 @@
+@import "~codemirror/lib/codemirror.css";
+
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
