Support Private components

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);/* BASICS */
+/* BASICS */
 
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
